force-app/main/default/objects/MUSW__Permit2__c/fields/Are_the_water_pump_s_permitted__c.field-meta.xml
<CustomField>
    <fullName>Are_the_water_pump_s_permitted__c</fullName>
    <inlineHelpText>If Unknown, please check with us.</inlineHelpText>
    <label>Are the water pump(s) permitted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>