force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>AVO_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I agree to voluntarily relinquish the above-mentioned permit.</inlineHelpText>
    <label>Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>