force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Acknowledgement_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Acknowledgement_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I agree to voluntarily request cancellation of the above permit</inlineHelpText>
    <label>Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>