force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Acres__c.field-meta.xml
<CustomField>
    <fullName>AVO_Acres__c</fullName>
    <label>Acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>