force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_ActiveRefNo__c.field-meta.xml
<CustomField>
    <fullName>AVO_ActiveRefNo__c</fullName>
    <label>Active Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>