force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Address__c.field-meta.xml
<CustomField>
    <fullName>AVO_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Address</label>
    <referenceTo>MUSW__Address__c</referenceTo>
    <relationshipLabel>Permits (Address)</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>