force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Agricultural_Well_Pump__c.field-meta.xml
<CustomField>
    <fullName>AVO_Agricultural_Well_Pump__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agricultural Well Pump</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>notEqual</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits (Agricultural Well Pump)</relationshipLabel>
    <relationshipName>Permitsz72w</relationshipName>
    <type>Lookup</type>
</CustomField>