force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Air_Line_Installed__c.field-meta.xml
<CustomField>
    <fullName>avo_Air_Line_Installed__c</fullName>
    <label>Air Line Installed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>