force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Amt_Irr__c.field-meta.xml
<CustomField>
    <fullName>AVO_Amt_Irr__c</fullName>
    <label>Amt Irr</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>