force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Any_casing_perforated_or_removed__c.field-meta.xml
<CustomField>
    <fullName>AVO_Any_casing_perforated_or_removed__c</fullName>
    <label>Any casing perforated or removed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>