force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_App_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_App_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>notEqual</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits (App ID)</relationshipLabel>
    <relationshipName>Permitsz75K</relationshipName>
    <type>Lookup</type>
</CustomField>