force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_AppID__c.field-meta.xml
<CustomField>
    <fullName>AVO_AppID__c</fullName>
    <label>AppID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>