force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_APPLICATION_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_APPLICATION_ID__c</fullName>
    <label>Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>