force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add New Withdrawal to Existing</fullName>
            </value>
            <value>
                <fullName>Install New Withdrawal</fullName>
            </value>
            <value>
                <fullName>Permit Existing Unpermitted Source</fullName>
            </value>
            <value>
                <fullName>Replace Permitted Well</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
                <isActive>false</isActive>
                <label>Add</label>
            </value>
            <value>
                <fullName>Existing</fullName>
                <isActive>false</isActive>
                <label>Existing</label>
            </value>
            <value>
                <fullName>Install</fullName>
                <isActive>false</isActive>
                <label>Install</label>
            </value>
            <value>
                <fullName>Replace</fullName>
                <isActive>false</isActive>
                <label>Replace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>