force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Application_Type_Modification__c.field-meta.xml
<CustomField>
    <fullName>AVO_Application_Type_Modification__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Modification and Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>