force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_ApplicationRev__c.field-meta.xml
<CustomField>
    <fullName>AVO_ApplicationRev__c</fullName>
    <label>Application Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>