force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>AVO_Approval_Step__c</fullName>
    <label>Approval Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>