force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Aquifer_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Aquifer_ID__c</fullName>
    <label>Aquifer ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Aquifers</valueSetName>
    </valueSet>
</CustomField>