force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Are_the_wells_idenified_permitted__c.field-meta.xml
<CustomField>
    <fullName>AVO_Are_the_wells_idenified_permitted__c</fullName>
    <inlineHelpText>If Unknown, please check with us.</inlineHelpText>
    <label>Are the well(s) identified permitted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>