force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_AutoID__c.field-meta.xml
<CustomField>
    <fullName>AVO_AutoID__c</fullName>
    <label>AutoID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>