force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Basin_GIS__c.field-meta.xml
<CustomField>
    <fullName>AVO_Basin_GIS__c</fullName>
    <label>Basin</label>
    <length>16</length>
    <type>Text</type>
</CustomField>