force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Big_Gun_Practice__c.field-meta.xml
<CustomField>
    <fullName>AVO_Big_Gun_Practice__c</fullName>
    <inlineHelpText>You must select and implement at least one of the practices listed below.</inlineHelpText>
    <label>Big Gun Required Practice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low trajectory angle delivery</fullName>
            </value>
            <value>
                <fullName>Hard hose with speed compensation</fullName>
            </value>
            <value>
                <fullName>Buried pipe water delivery system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>