force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Big_Gun_Recommended_Practice__c.field-meta.xml
<CustomField>
    <fullName>AVO_Big_Gun_Recommended_Practice__c</fullName>
    <inlineHelpText>The following practices are not required for irrigation system efficiencies certification, but are recognized as quality water management practices.  You may indicate which of the practices listed below you  are implementing or explain other practices in use.</inlineHelpText>
    <label>Big Gun Recommended Practice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Night-time only irrigation</fullName>
            </value>
            <value>
                <fullName>Conservation tillage</fullName>
            </value>
            <value>
                <fullName>GPS-enabled control panel of positioning</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>