force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Castin_ft__c.field-meta.xml
<CustomField>
    <fullName>AVO_Castin_ft__c</fullName>
    <label>Castin (ft)</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>