force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Center_Pivot_Advanced_Practice__c.field-meta.xml
<CustomField>
    <fullName>AVO_Center_Pivot_Advanced_Practice__c</fullName>
    <label>Center Pivot Advanced Practice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced irrigation scheduling</fullName>
            </value>
            <value>
                <fullName>Operational rain shut-off switch</fullName>
            </value>
            <value>
                <fullName>End gun shut-off</fullName>
            </value>
            <value>
                <fullName>Irrigation consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>