force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Center_Pivot_Linear_Move__c.field-meta.xml
<CustomField>
    <fullName>AVO_Center_Pivot_Linear_Move__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Center Pivot/Linear Move</label>
    <type>Checkbox</type>
</CustomField>