force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_CFS_Formula_Number_Test__c.field-meta.xml
<CustomField>
    <fullName>AVO_CFS_Formula_Number_Test__c</fullName>
    <formula>IF( TEXT(AVO_CFS_Number_Test__c) == &quot;0&quot;, &quot;-&quot;,
IF( TEXT(AVO_CFS_Number_Test__c) == NULL, &quot;-&quot;,
TEXT(AVO_CFS_Number_Test__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFS Formula Number Test</label>
    <type>Text</type>
</CustomField>