force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_CFS_Number_Test__c.field-meta.xml
<CustomField>
    <fullName>AVO_CFS_Number_Test__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CFS Number Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>