force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Chemicals_or_Fertilizers__c.field-meta.xml
<CustomField>
    <fullName>AVO_Chemicals_or_Fertilizers__c</fullName>
    <inlineHelpText>Will you inject chemicals or fertilizers into the irrigation water? If yes, wells must be equipped with a back siphonage preventer.</inlineHelpText>
    <label>Chemigation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>