force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Chemigation_check_valve_installed__c.field-meta.xml
<CustomField>
    <fullName>avo_Chemigation_check_valve_installed__c</fullName>
    <label>Chemigation check valve installed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>