force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_City__c.field-meta.xml
<CustomField>
    <fullName>AVO_City__c</fullName>
    <label>City</label>
    <length>4</length>
    <type>Text</type>
</CustomField>