force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Coastal_24__c.field-meta.xml
<CustomField>
    <fullName>AVO_Coastal_24__c</fullName>
    <label>24 Coastal</label>
    <length>16</length>
    <type>Text</type>
</CustomField>