force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_ComAcre__c.field-meta.xml
<CustomField>
    <fullName>AVO_ComAcre__c</fullName>
    <label>ComAcre</label>
    <length>16</length>
    <type>Text</type>
</CustomField>