force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Comes_from_repeater__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comes_from_repeater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comes from repeater</label>
    <type>Checkbox</type>
</CustomField>