force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Comments__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>