force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Concurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Concurrence_Date__c</fullName>
    <label>Concurrence Date</label>
    <type>Date</type>
</CustomField>