force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Concurrence_Expiration_For_Letter__c.field-meta.xml
<CustomField>
    <fullName>AVO_Concurrence_Expiration_For_Letter__c</fullName>
    <label>Concurrence Expiration For Letter</label>
    <type>Date</type>
</CustomField>