force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Conservation_tillage__c.field-meta.xml
<CustomField>
    <fullName>AVO_Conservation_tillage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conservation tillage</label>
    <type>Checkbox</type>
</CustomField>