force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Consolidated__c.field-meta.xml
<CustomField>
    <fullName>AVO_Consolidated__c</fullName>
    <label>Consolidated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>