force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Contact_Info_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Contact_Info_Verified_By__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(AVO_contact_Info_Verified_Date__c, &quot;Yes&quot;),
        BEGINS(OwnerId, &quot;005&quot;)  
    ),
    Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info Verified By</label>
    <type>Text</type>
</CustomField>