force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_ContInfoVerDt__c.field-meta.xml
<CustomField>
    <fullName>AVO_ContInfoVerDt__c</fullName>
    <label>Contact Info Last Verified Date</label>
    <type>Date</type>
</CustomField>