force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_County__c.field-meta.xml
<CustomField>
    <fullName>AVO_County__c</fullName>
    <label>County</label>
    <length>6</length>
    <type>Text</type>
</CustomField>