force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_County_Lookup__c.field-meta.xml
<CustomField>
    <fullName>AVO_County_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County of the Water Source</label>
    <referenceTo>AVO_County__c</referenceTo>
    <relationshipLabel>Permits (County)</relationshipLabel>
    <relationshipName>Permits1</relationshipName>
    <type>Lookup</type>
</CustomField>