force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_County_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_County_Number__c</fullName>
    <formula>LPAD( TEXT( AVO_County_Lookup__r.AVO_County__c ), 3, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County Number</label>
    <type>Text</type>
</CustomField>