force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_County_of_the_Water_Source__c.field-meta.xml
<CustomField>
    <fullName>AVO_County_of_the_Water_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County of the Water Source</label>
    <referenceTo>AVO_Location__c</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>