force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Cover__c.field-meta.xml
<CustomField>
    <fullName>AVO_Cover__c</fullName>
    <label>Cover</label>
    <length>16</length>
    <type>Text</type>
</CustomField>