force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Critical_LOC__c.field-meta.xml
<CustomField>
    <fullName>AVO_Critical_LOC__c</fullName>
    <label>Critical LOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>