force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Current_Permit_Activity_Use__c.field-meta.xml
<CustomField>
    <fullName>AVO_Current_Permit_Activity_Use__c</fullName>
    <label>Current Permit Activity Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>PINACTIVE</fullName>
            </value>
            <value>
                <fullName>Unused</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>