force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Current_Permitted__c.field-meta.xml
<CustomField>
    <fullName>AVO_Current_Permitted__c</fullName>
    <inlineHelpText>GPM</inlineHelpText>
    <label>Current Permitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>