force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Current_Permitted_Acres__c.field-meta.xml
<CustomField>
    <fullName>AVO_Current_Permitted_Acres__c</fullName>
    <inlineHelpText>Current number of permitted acres irrigated from this system</inlineHelpText>
    <label>Current Permitted Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>