force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Current_Permitted_GPM__c.field-meta.xml
<CustomField>
    <fullName>AVO_Current_Permitted_GPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Permitted (GPM)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>notEqual</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits (Current Permitted (GPM))</relationshipLabel>
    <relationshipName>Permits5</relationshipName>
    <type>Lookup</type>
</CustomField>