force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_CurrentRecord__c.field-meta.xml
<CustomField>
    <fullName>AVO_CurrentRecord__c</fullName>
    <label>CurrentRecord</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>