force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Created__c</fullName>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>