force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Date_Installed__c.field-meta.xml
<CustomField>
    <fullName>avo_Date_Installed__c</fullName>
    <label>Date Installed</label>
    <type>Date</type>
</CustomField>