force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Date_LOC_Expires__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_LOC_Expires__c</fullName>
    <label>LOC Expiration Date</label>
    <type>Date</type>
</CustomField>