force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Date_modified__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_modified__c</fullName>
    <label>Date Last Modified</label>
    <type>Date</type>
</CustomField>