force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Date_of_Application_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_of_Application_Cancellation__c</fullName>
    <label>Application Cancellation Date</label>
    <type>Date</type>
</CustomField>