force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Date_of_Irrigation_System_Installati__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_of_Irrigation_System_Installati__c</fullName>
    <label>Date of Irrigation System Installation</label>
    <type>Date</type>
</CustomField>