force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Date_of_Signature__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_of_Signature__c</fullName>
    <label>Date of Signature</label>
    <type>Date</type>
</CustomField>