force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Date_Permit_Expires__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Permit_Expires__c</fullName>
    <label>Permit Expiration date</label>
    <type>Date</type>
</CustomField>