force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Date_Permit_Issued__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Permit_Issued__c</fullName>
    <label>Original Permit Issue Date</label>
    <type>Date</type>
</CustomField>