force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Date_Tested__c.field-meta.xml
<CustomField>
    <fullName>avo_Date_Tested__c</fullName>
    <label>Date Tested</label>
    <type>Date</type>
</CustomField>