force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_DateEval__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateEval__c</fullName>
    <label>LOC Evaluation Date</label>
    <type>Date</type>
</CustomField>