force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_DateFinalEvaDone__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateFinalEvaDone__c</fullName>
    <label>Final Evaluation Date</label>
    <type>Date</type>
</CustomField>