force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_DateFinMap__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateFinMap__c</fullName>
    <label>Permit GIS Mapping Date</label>
    <type>Date</type>
</CustomField>