force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_DateMap__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateMap__c</fullName>
    <label>Application GIS Mapping Date</label>
    <type>Date</type>
</CustomField>