force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_DateRev__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateRev__c</fullName>
    <label>Application Reviewed Date</label>
    <type>Date</type>
</CustomField>