force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_DateRevRequested__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateRevRequested__c</fullName>
    <label>Permit Revision Initiated Date</label>
    <type>Date</type>
</CustomField>