force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>AVO_Decimal_Places__c</fullName>
    <label>Decimal Places</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>