force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Delivery_System__c.field-meta.xml
<CustomField>
    <fullName>AVO_Delivery_System__c</fullName>
    <inlineHelpText>Speed Compensation improves application uniformity; buried pipe is less prone to leaks.</inlineHelpText>
    <label>Delivery System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard hose with speed compensation</fullName>
            </value>
            <value>
                <fullName>Hard hose without speed compensation</fullName>
            </value>
            <value>
                <fullName>Buried Pipe water delivery system</fullName>
            </value>
            <value>
                <fullName>Portable pipe (above ground) water delivery</fullName>
            </value>
            <value>
                <fullName>Cable tow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>