force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Depth_ft__c.field-meta.xml
<CustomField>
    <fullName>AVO_Depth_ft__c</fullName>
    <label>Total Depth (ft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>