force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Depth_Interval_Sealed__c.field-meta.xml
<CustomField>
    <fullName>AVO_Depth_Interval_Sealed__c</fullName>
    <label>Depth Interval Sealed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>