force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Depth_of_Well_Casing__c.field-meta.xml
<CustomField>
    <fullName>AVO_Depth_of_Well_Casing__c</fullName>
    <inlineHelpText>(feet)</inlineHelpText>
    <label>Casing Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>