force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Describe_Other_Emitters__c.field-meta.xml
<CustomField>
    <fullName>AVO_Describe_Other_Emitters__c</fullName>
    <label>Describe Other Emitters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>