force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Description_of_Fill_Material__c.field-meta.xml
<CustomField>
    <fullName>AVO_Description_of_Fill_Material__c</fullName>
    <label>Description of Fill Material</label>
    <length>28</length>
    <type>Text</type>
</CustomField>