force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Description_of_Seal_Material__c.field-meta.xml
<CustomField>
    <fullName>AVO_Description_of_Seal_Material__c</fullName>
    <label>Description of Seal Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>