force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Designated_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Designated_Source_Name__c</fullName>
    <label>Designated Source Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>