force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Designated_Well_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Designated_Well_Name__c</fullName>
    <inlineHelpText>(ex. &quot;Well#1&quot; or &quot;Home Place Well&quot;)</inlineHelpText>
    <label>Designated Well Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>